Fix Game Over Screen for mobile not visible

--- a/css/style.css
+++ b/css/style.css
@@ -367,5 +367,8 @@ input[type=radio]:checked + .radio{
         height: 100%;
     }
     
+    #gameOver {
+        height: 100%;
+    }
     
 }
